# ai-workflow-automation-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: health.py  requests.py
app/core/: config.py  database.py
app/domain/: __init__.py  enums.py  normalization.py  schemas.py
app/providers/: __init__.py  base.py  errors.py  factory.py  mock.py  openai_adapter.py  openai_contracts.py  prompt_builder.py  response_parser.py
app/repositories/: __init__.py  base.py  models.py  request_repository.py
app/services/: __init__.py  errors.py  workflow.py
app/static/: styles.css
app/templates/: base.html  index.html  queue.html  request_detail.html
app/ui/: __init__.py  router.py
docs/: README.md  architecture.md
evals/: README.md  sample_cases.json
sample_data/: README.md  synthetic_requests.json
scripts/: README.md  seed_demo.py
tests/: conftest.py  test_demo_assets.py  test_health.py  test_openai_provider.py  test_requests_api.py  test_response_parser.py
