[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workflow-automation-assistant"
version = "0.1.0"
description = "Portfolio-ready AI workflow automation assistant built with FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.0,<3.0",
    "fastapi>=0.111,<1.0",
    "jinja2>=3.1,<4.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
